--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "create-db-mac": "chmod +x ./scripts/create_database.sh ; ./scripts/create_database.sh",
+    "remove-db-mac": "chmod +x ./scripts/remove_database.sh ; ./scripts/remove_database.sh"
   },
   "repository": {
     "type": "git",
