--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "create-db-mac": "chmod +x ./scripts/create_database.sh ; ./scripts/create_database.sh",
-    "remove-db-mac": "chmod +x ./scripts/remove_database.sh ; ./scripts/remove_database.sh"
+    "create-db-mac": "chmod +x ./scripts/create_database.sh ; ./scripts/create_database.sh eat_da_burger_DB",
+    "remove-db-mac": "chmod +x ./scripts/remove_database.sh ; ./scripts/remove_database.sh",
+    "create-db-win": ".\\scripts\\invoke_script.cmd .\\scripts\\Create-Database.ps1 eat_da_burger_DB",
+    "remove-db-win": ".\\scripts\\invoke_script.cmd .\\scripts\\Remove-Database.ps1"
   },
   "repository": {
     "type": "git",
